# AsciiCam

./: .gitignore  CMakeLists.txt  README.md  requirements.sh
code/: CMakeLists.txt  ascii_converter.cpp  ascii_converter.h  chat.cpp  chat.h  client.cpp  client.h  definitions.h  executor.cpp  executor.h  input_device.cpp  input_device.h  logger.cpp  logger.h  main.cpp  network.cpp  network.h  printer.cpp  printer.h  scroll_object.cpp  scroll_object.h  send_get_message.cpp  server.cpp  server.h  video_driver.cpp  video_driver.h  webcam_capture.cpp  webcam_capture.h  window.h
code/devices/: input_device.cpp  input_device.h  terminal.cpp  terminal.h  video_driver.cpp  video_driver.h  webcam_capture.cpp  webcam_capture.h
code/windows/: chat.cpp  chat.h  video_gallery.cpp  video_gallery.h
server/: CMakeLists.txt  main.cpp  user_channel.cpp  user_channel.h
